Implemented ownership for reviews and paging for reviews and books